--- a/HTML - response/index.html
+++ b/HTML - response/index.html
@@ -45,12 +45,25 @@
     
     <nav id="navi">
     	<div class="inner">
+        	<label for="show-menu" class="show-menu">Show Menu</label>
         	<div class="menu">
             	<ul>
-                    <li><a href="#">home</a></li>
+                    <li><a href="#" style="color: #fff; background: #fe9407;">home</a></li>
                     <li><a href="#">店舗紹介</a></li>
-                    <li><a href="#">エステ</a></li>
-                    <li><a href="#">ヘアクリニック</a></li>
+                    <li><a href="#">エステ</a>
+                    	<ul class="sub-menu">
+                            <li><a href="#">フェイシャル</a></li>
+                            <li><a href="#">スリム</a></li>
+                            <li><a href="#">脱毛</a></li>
+                            <li><a href="#">美肌再生プログラム</a></li>
+                      	</ul>
+                    </li>
+                    <li><a href="#">ヘアクリニック</a>
+                    	<ul class="sub-menu">
+                            <li><a href="#">発毛</a></li>
+                            <li><a href="#">症例</a></li>
+                      	</ul>
+                    </li>
                     <li><a href="#">よくあるご質問</a></li>
                     <li><a href="#">お客様の声</a></li>
                     <li><a href="#">アクセス</a></li>
@@ -157,7 +170,7 @@
                 </div>
             </section>
             <aside id="aside">
-            	<img src="images/aside_img_1.jpg" alt="脱毛あなたは今の脱毛に満足していますか？他店で満足いかなかった方の満足度が違います！！" />
+            	<img src="images/aside_img_1.jpg" alt="脱毛あなたは今の脱毛に満足していますか？他店で満足いかなかった方の満足度が違います！！" class="aside_img_1" />
                 <div class="bg_border_r_1">
                 	<h2>取り扱いメニュー</h2>
                     <div class="nicdark_divider  left big " style="padding:0 7px 0px 7px;">
@@ -238,14 +251,14 @@
             	</div>
                 <div class="menu_footer_2">
                     <ul>
-                        <li><a  href="#">取り扱いメニュー</a></li>
-                        <li><a href="#">フェイシャル</a></li>
-                        <li><a href="#">スリム</a></li>
-                        <li><a href="#">脱毛</a></li>
-                        <li><a href="#">美肌再生プログラム</a></li>
-                        <li><a href="#">アクティについて</a></li>
-                        <li><a href="#">発毛</a></li>
-                        <li><a href="#">症例</a></li>
+                        <li><img src="images/aside_bullet_1.jpg" class="aside_bullet_1">&nbsp;&nbsp;<a  href="#">取り扱いメニュー</a></li>
+                        <li><img src="images/footer_bullet.png">&nbsp;&nbsp;<a href="#">フェイシャル</a></li>
+                        <li><img src="images/footer_bullet.png">&nbsp;&nbsp;<a href="#">スリム</a></li>
+                        <li><img src="images/footer_bullet.png">&nbsp;&nbsp;<a href="#">脱毛</a></li>
+                        <li><img src="images/footer_bullet.png">&nbsp;&nbsp;<a href="#">美肌再生プログラム</a></li>
+                        <li><img src="images/footer_bullet.png">&nbsp;&nbsp;<a href="#">アクティについて</a></li>
+                        <li><img src="images/footer_bullet.png">&nbsp;&nbsp;<a href="#">発毛</a></li>
+                        <li><img src="images/footer_bullet.png">&nbsp;&nbsp;<a href="#">症例</a></li>
                     </ul>
             	</div>
             </div>
