complete web HTML Response version 1

--- a/HTML - response/index.html
+++ b/HTML - response/index.html
@@ -29,7 +29,7 @@
     	<div class="inner">
 			<div class="logo">
 				<p>滋賀県草津市のエステ・発毛・育毛の専門家がいるサロンです。</p>
-				<img src="images/header_logo.jpg" alt="logo" title="logo">
+				<img src="images/header_logo.jpg" alt="logo" title="logo" class="img_logo">
 			</div>
 			<div class="header_info">
 				<p>滋賀県草津市大路1丁目8-1 南洋軒ビル6F</p>
@@ -45,9 +45,11 @@
     
     <nav id="navi">
     	<div class="inner">
-        	<label for="show-menu" class="show-menu">Show Menu</label>
+        	
         	<div class="menu">
-            	<ul>
+            <label for="show-menu" class="show-menu">Show Menu</label>
+            <input type="checkbox" id="show-menu" role="button">
+            	<ul class="big_menu">
                     <li><a href="#" style="color: #fff; background: #fe9407;">home</a></li>
                     <li><a href="#">店舗紹介</a></li>
                     <li><a href="#">エステ</a>
@@ -98,7 +100,7 @@
                 		</div>
                     </div>
                     <div class="image_1">
-                    	<img src="images/img_1.jpg" />
+                    	<img src="images/img_1.jpg" class="img_1" />
                     </div>
                     <div class="text_1">
                     	<p>Feminine（フェミニン）では、フェイシャル・ボディトリートメントを通して「女性らしく」をテーマに皆様の美（ビューティー）をサポートします。</p>
